objects/MessagingSession_Home__dll.object
<CustomObject>
    <fields>
        <fullName>AcceptTime__c</fullName>
        <label>Accept Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AgentType__c</fullName>
        <label>Agent Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelGroup__c</fullName>
        <label>Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelIntent__c</fullName>
        <label>Intent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelKey__c</fullName>
        <label>Channel Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelLocale__c</fullName>
        <label>Locale</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelName__c</fullName>
        <label>Channel Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelType__c</fullName>
        <label>Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversationId__c</fullName>
        <label>Conversation ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndUserAccountId__c</fullName>
        <label>Account ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserContactId__c</fullName>
        <label>Contact ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndedByType__c</fullName>
        <label>Ended By Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Messaging Session ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <label>Deleted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <label>Last Modified By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MessagingChannelId__c</fullName>
        <label>Messaging Channel ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessagingEndUserId__c</fullName>
        <label>Messaging User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Messaging Session Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>Opportunity ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviewDetails__c</fullName>
        <label>Preview Details</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionKey__c</fullName>
        <label>Session Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TargetUserId__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_PartitionDate__c</fullName>
        <label>cdp_sys_PartitionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>